--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/fonts": "^0.7.1",
+    "@nuxt/ui": "^2.18.4",
+    "normalize.css": "^8.0.1",
     "nuxt": "^3.12.4",
     "vue": "latest"
   },
   "devDependencies": {
+    "sass-embedded": "^1.77.8",
     "typescript": "^5.5.4",
     "vue-tsc": "^2.0.29"
   }
