--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.13.4",
     "sass-embedded": "^1.77.8",
     "typescript": "^5.5.4",
     "vue-tsc": "^2.0.29"
